# replit_v3

./: .env.example  .gitignore  Makefile  README.md  changelog.md  fastapi_ollama_proxy_lean_plan.md  project_description.md  pyproject.toml  testing.md
app/: __init__.py  config.py  db.py  errors.py  main.py
app/api/: deps.py  router.py
app/clients/: __init__.py  ollama.py
app/core/: config.py  errors.py  request_context.py
app/db/: __init__.py  connection.py  migrations.py  seed.py
app/domain/: auth.py  limits.py  models.py  usage.py
app/middleware/: request_id.py  request_size.py
app/repositories/: __init__.py  base.py  limits.py  models.py  quota.py  tokens.py  usage.py  users.py
app/schemas/: admin.py  errors.py  limits.py  usage.py
app/services/: admin_service.py  auth.py  auth_service.py  chat_proxy.py  limits.py  (+7 more)
docs/: concurrency_failure_options.md  minimal_logging_plan.md
scripts/: demo_chat.py  demo_concurrency.py  demo_helpers.py  demo_limits.py  demo_load_test.py  demo_standard.py  demo_streaming.py  demo_usage.py  demo_usage_report.py  demo_vision.py  load_test.py  mock_ollama.py  seed_dev_data.py
tests/: conftest.py  test_atomic_limit_reservations_and_client_lifecycle.py  test_atomic_limits_and_client_lifecycle.py  test_auth_models_and_seed_data.py  test_chat_completions_usage.py  test_concurrency_controls.py  test_demo_load_test_metrics.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_streaming_vision_and_request_validation.py  test_usage_and_limits_api.py  test_usage_report.py
(+14 files in other folders)
